Minor debuggability improvements in preparation for fix of #29719: CompatibilityTest broken in JDK 1.4.1.

--- a/openide/build.xml
+++ b/openide/build.xml
@@ -896,6 +896,9 @@ Set jmf.home to the location of your JMF installation to continue."/>
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
+      <fileset dir="compat/src">
+        <include name="**/*.class"/>
+      </fileset>
       <fileset dir="api/examples">
         <include name="**/*.class"/>
       </fileset>
