Added MDR xml and xml-api samples to daily-alpaha-nbms module configuration

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -217,6 +217,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         logger, \
         makefile, \
         mdr, \
+        mdr/samples/xml, \
         metrics, \
         monitor, \
         multicompile, \
