Added target all-mdr/samples/xml

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -397,6 +397,10 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <echo message="Building module mdr..."/>
     <ant dir="../mdr" target="netbeans"/>
   </target>
+  <target name="all-mdr/samples/xml" depends="all-openide,all-openidex,all-openidex/looks,all-xml/core,all-mdr">
+    <echo message="Building module mdr/samples/xml..."/>
+    <ant dir="../mdr/samples/xml" target="netbeans"/>
+  </target>
   <target name="all-multicompile" depends="all-openide,all-openide/compiler,all-openide/execution">
     <echo message="Building module multicompile..."/>
     <ant dir="../multicompile" target="netbeans"/>
