--- a/o.apache.tools.ant.module/test/build.xml
+++ b/o.apache.tools.ant.module/test/build.xml
@@ -14,7 +14,7 @@ Microsystems, Inc. All Rights Reserved.
 
 <project name="Ant tests" basedir="." default="all">
 
-    <property name="xtest.ide.winsys" value="sdi"/>
+    <property name="xtest.ide.winsys" value="mdi"/>
 
     <!-- Ant property. Value 'ignore' means that system classpath is ignored
          and only classpath specified in build file is used. -->
