--- a/db/build.xml
+++ b/db/build.xml
@@ -79,8 +79,12 @@ Microsystems, Inc. All Rights Reserved.
   <target name="javahelp">
     <mkdir dir="javahelp/org/netbeans/modules/db/docs/JavaHelpSearch2"/>
     <jhindexer basedir="javahelp/org/netbeans/modules/db/docs/"
-               db="javahelp/org/netbeans/modules/db/docs/JavaHelpSearch2"
-               jhall="../nbbuild/external/jhall-1.1.2_02.jar">
+               db="javahelp/org/netbeans/modules/db/docs/JavaHelpSearch2">
+      <classpath>
+         <fileset dir="../nbbuild/external">
+	   <include name="jhall*.jar"/>
+	 </fileset>
+      </classpath>
       <include name="**/*.html"/>
       <exclude name="JavaHelpSearch2/"/>
       <exclude name="ja/"/>
@@ -89,8 +93,12 @@ Microsystems, Inc. All Rights Reserved.
     <mkdir dir="javahelp/org/netbeans/modules/db/docs/ja/JavaHelpSearch2"/>
     <jhindexer basedir="javahelp/org/netbeans/modules/db/docs/ja/"
                db="javahelp/org/netbeans/modules/db/docs/ja/JavaHelpSearch2"
-               locale="ja"
-               jhall="../nbbuild/external/jhall-1.1.2_02.jar">
+               locale="ja">
+      <classpath>
+         <fileset dir="../nbbuild/external">
+	   <include name="jhall*.jar"/>
+	 </fileset>
+      </classpath>
       <include name="**/*.html"/>
       <exclude name="JavaHelpSearch2/"/>
       <exclude name="credits.html"/>
