--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
@@ -53,10 +53,12 @@ ACSN_target_node_panel=Select A Task Panel
 ACSD_target_node_panel=Select a task panel.
 LBL_task_new_type=Task...
 LBL_choose_task=Choose a task to add:
+LBL_choose_task_mnem=C
 ACSN_choose_task_combo=Choose A Task Combo Box
 ACSD_choose_task_combo=Choose a task to add.
 # {0} - task name
 LBL_task_help=Task Help
+LBL_task_help_mnem=T
 TITLE_select_task=Select a Task
 PROP_target_name=Target Name
 HINT_target_name=A name by which to refer to this target.
