--- a/ant.grammar/src/org/netbeans/modules/ant/grammar/Bundle.properties
+++ b/ant.grammar/src/org/netbeans/modules/ant/grammar/Bundle.properties
@@ -6,13 +6,16 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-## ant/completion/manifest.mf
 OpenIDE-Module-Name=Ant Code Completion
-OpenIDE-Module-Display-Category=Bridges
-OpenIDE-Module-Short-Description=The module provides grammar for Ant scripts.
-OpenIDE-Module-Long-Description=The module provides grammar for Ant scripts. It gets enabled if XML Text or XML Tree module is enabled.
-
-#---
+OpenIDE-Module-Display-Category=Tools
+OpenIDE-Module-Short-Description=Code completion for textual editing of Ant scripts.
+OpenIDE-Module-Long-Description=\
+    This module permits you to use code completion when editing Ant scripts in the \
+    NetBeans source editor. It will suggest attributes and subelements that can be \
+    added to the current element you are editing. Completion knows about all standard \
+    Ant tasks and types, as well as custom-defined tasks and types, and works with \
+    nested data structures just as Explorer-based editing of Ant scripts does. \
+    The module requires either the XML Text or XML Tree modules (or both) to be enabled.
