Publish Ant Code Completion on daily alpha update server.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -163,6 +163,7 @@ config.modules.stable-with-apisupport=${config.modules.stable}, \
 
 config.fixedmodules.bloated=${config.fixedmodules.stable-with-apisupport}
 config.modules.bloated=${config.modules.stable-with-apisupport}, \
+        ant/grammar, \
         classclosure, \
         corba, \
         core/naming, \
@@ -204,6 +205,7 @@ config.modules.bloated-plus-extrabins=${config.modules.bloated}, \
 # reconsider module cpp
 config.fixedmodules.daily-alpha-nbms=${config.fixedmodules.stable-with-apisupport}
 config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
+        ant/grammar, \
         classclosure, \
         corba, \
         core/naming, \
