Fixed bug #27558 - "No label for the button".

--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -132,3 +132,4 @@ Templates/Services/SearchType/org-netbeans-modules-search-ObjectTypeType.setting
 Templates/Services/SearchType/org-netbeans-modules-search-ObjectNameType.settings=Object Name
 
 ACS_DIALOG_DESC=Dialog for searching by criteria
+TEXT_BUTTON_SHOW_TOOLTIP=Locates and highlights the file in Explorer.
