#28340: an empty dialog appears if you try to debug w/ "(do not debug)" set as the debugger type; using and looking for ErrorManager annotations properly in ExecutionSupport.choose(). Also moving some bundle keys into the proper modules.

--- a/openide.execution/src/org/openide/execution/Bundle.properties
+++ b/openide.execution/src/org/openide/execution/Bundle.properties
@@ -59,6 +59,17 @@ LAB_NoExecutor=(do not execute)
 # {0} - class name
 EXC_NoExecutor=The class {0} is not configured to be executed.\nYou may change this if you wish.
 
+# ExecutionSupport
+PROP_fileParams=Arguments
+PROP_execution=Executor
+HINT_fileParams=Arguments for the main() method, as a list of strings separated by spaces.
+HINT_execution=Execution style to use from among the installed executors.
+MSG_ConfigureService=Service configuration
+CTL_ServiceConfigure=Configure
+CTL_Service_Configuration_Title=Incorrect Configuration
+# {0} - display name of inappropriate service type
+LBL_unknown_service_misconfig=The service {0} is not appropriate for this object.
+
 OpenIDE-Module-Name=Execution API
 OpenIDE-Module-Display-Category=Infrastructure
 OpenIDE-Module-Short-Description=Execution API from the Open APIs.
