Fix of #29700, 27186: don't show message dialog when could not use declared superclass from java file; don't allow incompatible (non-viusal) declared superclass to be used if FormInfo is visual.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -159,20 +159,21 @@ MSG_ERR_MissingMainElement=Invalid format: main \"Form\" element not found in th
 # {0} = version number
 FMT_ERR_UnsupportedVersion=Unsupported form file version: {0}.\nThe form cannot be opened.
 
-# formatting of warning message when a substitute form type is used
-# {0} = the type which failed
-# {1} = the substitute type
-# {2} = folder where ide.log is placed
-FMT_FormTypeFallsBack=Cannot create form based on the class specified (extended) in the java\n\
-source file. The problematic class is: {0}.\n\
-It was not possible to load the class or create an instance of it.\n\
-Form Editor will use {1} instead (for design only).\n\n\
-See the ide.log file for details about exceptions.\n\
-The ide.log file is located in the {2} folder.
+# formatting of warning message printed to console when a substitute form type is used
+# {0} name of the opening form
+# {1} name of the class used as the fallback form type alternative
+# {2} name of the class that could not be used
+FMT_FormTypeWarning=[WARNING] Opening form {0} as {1}.\n\          Could not use \
+the declared superclass: {2}
+
+# formatting of warning message printed to console when form type in form file
+# is not compatible with superclass declared in the java file
+# {0} name of the opening form
+FMT_IncompatibleFormTypeWarning=[WARNING] Form {0} has incompatible superclass declared in java file.
 
 # formatting of message when the form cannot be based on given class
 # {0} = the invalid base class name
-FMT_ERR_InvalidBaseClass=Cannot create form based on {0}.\n\
+FMT_ERR_InvalidBaseClass=Cannot determine form type ({0}).\n\
 Please make sure the class is a JavaBean.\nThe form cannot be opened.
 
 # message when the base class of the form cannot be determined
