Adding instances enabled, shows in server registry

--- a/tomcat5/src/org/netbeans/modules/tomcat5/Bundle.properties
+++ b/tomcat5/src/org/netbeans/modules/tomcat5/Bundle.properties
@@ -75,3 +75,11 @@ LBL_Tomcat5=Tomcat 5
 
 # Tomcat5ServerNode
 HINT_Tomcat5=Tomcat 5 servlet container.
+
+# Tomcat5DO
+SEL_debuggingType_1=socket
+SEL_debuggingType_0=shared memory
+HINT_installationNodeName=Tomcat 4.0 installation
+
+# Tomcat5Loader
+LBL_tomcat5loaderName=Tomcat 5 Loader
