--- a/tomcat5/src/org/netbeans/modules/tomcat5/nodes/Bundle.properties
+++ b/tomcat5/src/org/netbeans/modules/tomcat5/nodes/Bundle.properties
@@ -11,10 +11,14 @@
 # Microsystems, Inc. All Rights Reserved.
 #
 
-# Module manifest localization
-OpenIDE-Module-Name=Tomcat 5 Server
-OpenIDE-Module-Display-Category=Web
-OpenIDE-Module-Short-Description=IDE plugin for Tomcat 5 servlet container
-OpenIDE-Module-Long-Description=Plugin tha allows developing and executing web applications with Tomcat 5 web server.
+# Tomcat5InstallationNode
+# 0 - home dir of tomacat install
+LBL_singleInstallNodeName={0}
+# 0 - base dir of tomacat install, 1 - home dir of tomacat install
+LBL_sharedInstallNodeName={0} + {1}
 
-Services/MIMEResolver/org-netbeans-modules-tomcat5-resolver.xml=Tomcat 5 Configuration files
+# 0...display name of the installation path or "Internal"
+# 1...display name of the running state
+LBL_TomcatInstWithStatus={0} [{1}]
+LBL_STATUS_RUNNING=Running
+LBL_STATUS_NOTRUNNING=Not Running
