Starts/stops the server with no integration

--- a/tomcat5/src/org/netbeans/modules/tomcat5/Bundle.properties
+++ b/tomcat5/src/org/netbeans/modules/tomcat5/Bundle.properties
@@ -1,10 +1,17 @@
+#
+#                 Sun Public License Notice
+# 
+# The contents of this file are subject to the Sun Public License
+# Version 1.0 (the "License"). You may not use this file except in
+# compliance with the License. A copy of the License is available at
+# http://www.sun.com/
+# 
+# The Original Code is NetBeans. The Initial Developer of the Original
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2001 Sun
+# Microsystems, Inc. All Rights Reserved.
+#
 
 MSG_tomcatServerDisplayName=Tomcat 5
-
-MSG_TomcatExecution={assert_enabled} = assertions enabled (JDK 1.4 option)\n{java.home} = JDK installation directory\n{tomcat_filesystems} = filesystems for tomcat launch\n{catalina_home} = tomcat home directory\n{catalina_base} = tomcat base directory\n{classname} = name of class to be executed\n{arguments} = tomcat arguments (start/stop/...)\n{/} = file name separator character\n{:} = (class-)path separator character
-MSG_TomcatDebugging={assert_enabled} = assertions enabled (JDK 1.4 option)\n{java.home} = JDK installation directory\n{classic} = use classic parameter of JVM\n{debuggerOptions} = debugging paramaters of JVM\n{tomcat_filesystems} = filesystems for tomcat launch\n{catalina_home} = tomcat home directory\n{catalina_base} = tomcat base directory\n{classname} = name of class to be executed\n{arguments} = tomcat arguments (start/stop/...)\n{/} = file name separator character\n{:} = (class-)path separator character\n
-
-MSG_portInUse=Port {1} on host {0} is already in use.
 
 A11Y_DESC_homeDir=Tomcat 5.0 installation home directory (For instance: c:\tomcat\tomcat5.0)
 A11Y_DESC_baseDir=Tomcat 5.0 installation base directory. This is the directory containing subdirectory conf with Tomcat 5.0 configuration file (server.xml). If it is the same as home directory - doesn't need to be specifi\ned.
@@ -29,9 +36,6 @@ LBL_homeDir_Mnem=H
 LBL_file_chooser=Browse ...
 LBL_directory_filter=Directory filter
 
-displayNameForStartServerAction=Start Server
-displayNameForStopServerAction=Stop Server
-displayNameForRestartServerAction=Restart Server
 PROP_monitorFilter=IDE Integration Mode
 HINT_monitorFilter=FULL mode enables using JSP Debugging and Monitoring in IDE
 LBL_ideIntegrationMode=IDE Integration Mode:
@@ -65,3 +69,14 @@ HINT_installationNodeName=Tomcat 4.0 installation
 
 # Tomcat5Loader
 LBL_tomcat5loaderName=Tomcat 5 Loader
+
+# Tomcat5Installation
+MSG_TomcatExecution={assert_enabled} = assertions enabled (JDK 1.4 option)\n{java.home} = JDK installation directory\n{tomcat_filesystems} = filesystems for tomcat launch\n{catalina_home} = tomcat home directory\n{catalina_base} = tomcat base directory\n{classname} = name of class to be executed\n{arguments} = tomcat arguments (start/stop/...)\n{/} = file name separator character\n{:} = (class-)path separator character
+MSG_TomcatDebugging={assert_enabled} = assertions enabled (JDK 1.4 option)\n{java.home} = JDK installation directory\n{classic} = use classic parameter of JVM\n{debuggerOptions} = debugging paramaters of JVM\n{tomcat_filesystems} = filesystems for tomcat launch\n{catalina_home} = tomcat home directory\n{catalina_base} = tomcat base directory\n{classname} = name of class to be executed\n{arguments} = tomcat arguments (start/stop/...)\n{/} = file name separator character\n{:} = (class-)path separator character\n
+
+MSG_TomcatProgress0=Tomcat server execution/debugging/deployment process.
+MSG_TomcatProgress5=The Tomcat server is not running correctly.
+MSG_TomcatProgress4=The Tomcat server is running correctly.
+MSG_TomcatProgress3=Starting Tomcat 4.0 at location {0}.
+MSG_TomcatProgress2=Stopping the previous Tomcat server process.
+MSG_TomcatProgress1=Creating the Tomcat server configuration files.
