--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -97,3 +97,72 @@ TTT_Properties=Properties of selected component.
 LBL_Properties=Property Sheet
 
 LBL_ComponentTree=Component Tree
+
+LBL_named_script_description={0} [XTest buildscript]
+
+LBL_anon_script_description=Anonymous XTest buildscript
+
+LBL_execution=Execution
+
+HINT_execution=Execution-related properties of this object.
+
+
+# NetBeansLogger
+MSG_running_ant=Running Ant...
+MSG_finished_target_printed=BUILD SUCCESSFUL
+MSG_finished_target_status=Finished Ant target(s).
+MSG_target_failed_printed=BUILD FAILED
+MSG_target_failed_status=Ant target failed.
+# {0} - target name
+MSG_target_started_printed={0}:
+# {0} minutes
+# {1} seconds
+MSG_finished_target_time=Total time: {0, choice, 0#| 1#1 minute | 2#{0} minutes }{1, choice, 0#0 seconds| 1#1 second| 2#{1} seconds}
+
+# OutputWriterOutputStream
+ERR_unknown=Unknown error
+# {0} - file name where error occurred
+# {1} - text of error
+MSG_err={0} {1}
+# {0} - file name where error occurred
+# {1} - text of error
+# {2} - line number
+MSG_err_line={0} [{2}] {1}
+# {0} - file name where error occurred
+# {1} - text of error
+# {2} - line number
+# {3} - column number
+MSG_err_line_col={0} [{2}:{3}] {1}
+# {0} - file name where error occurred
+# {1} - text of error
+# {2} - line number
+# {3} - start column number
+# {4} - end column number
+MSG_err_line_col_col={0} [{2}:{3}-{4}] {1}
+# {0} - file name where error occurred
+# {1} - text of error
+# {2} - start line number
+# {3} - start column number
+# {4} - end line number
+# {5} - end column number
+MSG_err_line_col_line_col={0} [{2}:{3}-{4}:{5}] {1}
+
+# TargetExecutor
+# {0] - project name
+# {1} - file name
+# {2} - target name(s)
+TITLE_output_target={0} ({2})
+# CAUTION: space at end of next line intentional!
+SEP_output_target=, 
+# {0] - project name
+# {1} - file name
+TITLE_output_notarget={0}
+TITLE_output_reused=Ant Execution
+
+# Localization of following key must be identical with
+# localization of key "CTL_CompileTab" from org.netbeans.core.compiler.Bundle
+# See also issue: 24474
+TITLE_output_compilation=Compiler
+
+LBL_unparseable_proj_name=???
+EXC_non_local_proj_file=You may only execute Ant scripts residing on disk.
