Added cpp module to daily-alpha-nbms configuration

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -209,6 +209,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         classclosure, \
         corba, \
         core/naming, \
+        cpp, \
         cpplite, \
         db, \
         externaleditor, \
