Fixed bug #30178 "Connect" replaced by "Connect ..."

--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -36,7 +36,7 @@ RemoveDriver = Remove Driver
 TestDriver = Test Driver ...
 
 AddConnection = Add Connection ...
-Connect = Connect
+Connect = Connect ...
 ConnectAs = Connect As ...
 ConnectUsing = Connect Using ...
 Disconnect = Disconnect
