--- a/o.apache.tools.ant.module.docs/src/org/apache/tools/ant/module/docs/Bundle.properties
+++ b/o.apache.tools.ant.module.docs/src/org/apache/tools/ant/module/docs/Bundle.properties
@@ -9,7 +9,7 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-OpenIDE-Module-Name=Ant Documentation
+OpenIDE-Module-Name=Ant 1.5.1 Documentation
 OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Short-Description=Documentation and code completion for Ant.
 OpenIDE-Module-Long-Description=\
