Add build target for a new tasklist module (tasklist/javadoc)

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -117,6 +117,7 @@ local.config.tasklist=tasklist/api, \
 	tasklist/docscan, \
 	tasklist/usertasks, \
 	tasklist/editor, \
+	tasklist/javadoc, \
 	tasklist/bugs
 
 local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
