--- a/junit/build.xml
+++ b/junit/build.xml
@@ -97,6 +97,7 @@ Microsystems, Inc. All Rights Reserved.
         <!-- XXX -->
         <pathelement location="../openide/compiler/netbeans/modules/autoload/openide-compiler.jar"/>
         <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
+        <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
         <fileset dir="external">
           <include name="junit*.jar"/>
         </fileset>
