--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -137,8 +137,12 @@ Microsystems, Inc. All Rights Reserved.
   <target name="javahelp">
     <mkdir dir="javahelp/org/netbeans/modules/testtools/docs/JavaHelpSearch2"/>
     <jhindexer basedir="javahelp/org/netbeans/modules/testtools/docs/"
-               db="javahelp/org/netbeans/modules/testtools/docs/JavaHelpSearch2"
-               jhall="${nbroot}/nbbuild/external/jhall-1.1.2_02.jar">
+               db="javahelp/org/netbeans/modules/testtools/docs/JavaHelpSearch2">
+      <classpath>
+        <fileset dir="../nbbuild/external">
+          <include name="jhall*.jar"/>
+        </fileset>
+      </classpath>
       <include name="**/*.html"/>
       <exclude name="JavaHelpSearch2/"/>
       <exclude name="credits.html"/>
