Added openidex/looks to daily-alpha-nbms moduleconfig

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -225,6 +225,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         monitor, \
         multicompile, \
         objectbrowser, \
+        openidex/looks, \
         remotefs, \
         serialversion, \
         sysprops, \
